--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="main">
         <input type="text" placeholder="search" id="search">
         <button id="sub">submit</button>
+        <button id="del">delete results</button>
     </div>
     <div id="result"></div>
     <script
