--- a/index.html
+++ b/index.html
@@ -5,36 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Rusty's Neighborhood Grocery</title>
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">Product Search</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="product.html">Product Search</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
     </nav>
     <main>
-        <img id="rustys-logo" src="imgs/groc.png">
+        <h1>Welcome to Rusty's Neighborhood Grocery!</h1>
+        <img id="rustys-logo" src="/imgs/groc.png">
+        <p>At Rusty's, we believe your time is the most valuable product.
+            <br>We strive to get you the information you need, so you have more time for everything else!
+            <br>Please use our product search to learn more about what we carry, and feel free to contact us at anytime!
+        </p>
     </main>
-    <div id="search-bar">
-        <input type="text" placeholder="search for an item" id="search">
-        <button id="sub">Search</button>
-        <button id="del">Search Again?</button>
-    </div>
-    <div id="result">
-        <ul id="resultList">
-
-        </ul>
-    </div>
-        <ul></ul>
-    <div id="shopList">
-        
-    </div>
-    <p>Test site. Will find items that contain search result<br>Example search "a" or "milk". Contain temp test images
-    <br>Search again will delete results and allow new search, otherwise new search will append to the bottom of previous search</p>
     
     <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
