--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <main>
         <h1>Welcome to Rusty's Neighborhood Grocery!</h1>
-        <img id="rustys-logo" src="/imgs/groc.png">
+        <img id="rustys-logo" src="imgs/groc.png">
         <p>At Rusty's, we believe your time is the most valuable product.
             <br>We strive to get you the information you need, so you have more time for everything else!
             <br>Please use our product search to learn more about what we carry, and feel free to contact us at anytime!
