--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
           </ul>
     </nav>
     <main>
-        <img id="rustys-logo" src="imgs/groc.png">
+        <img id="rustys-logo" src="/imgs/groc.png">
     </main>
     <div id="search-bar">
         <input type="text" placeholder="search for an item" id="search">
@@ -33,6 +33,7 @@
     <div id="shopList">
         
     </div>
+    <a href="departments.html" id="deptSearch">Search By Department</a>
     <p>Test site. Will find items that contain search result<br>Example search "a" or "milk". Contain temp test images
     <br>Search again will delete results and allow new search, otherwise new search will append to the bottom of previous search</p>
     
