--- a/departments.html
+++ b/departments.html
@@ -17,7 +17,7 @@
           </ul>
     </nav>
     <main>
-        <img id="rustys-logo" src="/imgs/groc.png">
+        <img id="rustys-logo" src="imgs/groc.png">
     </main>
     <div id="search-bar">
         <input type="text" placeholder="search for an item" id="search">
