--- a/product.html
+++ b/product.html
@@ -17,12 +17,11 @@
           </ul>
     </nav>
     <main>
-        <img id="rustys-logo" src="imgs/groc.png">
+        <img id="rustys-logo" src="/imgs/groc.png">
     </main>
     <div id="search-bar">
         <input type="text" placeholder="search for an item" id="search">
         <button id="sub">Search</button>
-        <button id="del">Search Again?</button>
     </div>
     <div id="result">
         <ul id="resultList">
