--- a/product.html
+++ b/product.html
@@ -33,8 +33,7 @@
         
     </div>
     <a href="departments.html" id="deptSearch">Search By Department</a>
-    <p>Test site. Will find items that contain search result<br>Example search "a" or "milk". Contain temp test images
-    <br>Search again will delete results and allow new search, otherwise new search will append to the bottom of previous search</p>
+    <p>Test site. Will find items that contain search result<br>Example search "a" or "milk". Hit search again for new results. Pressing enter does not search
     
     <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
